@@ -10,7 +10,7 @@ jsonrpc = localhost:8000
 #hostname_jsonrpc =
 
 # Configure the path of json-rpc data
-#jsondata_path = /var/www/localhost/tryton
+jsondata_path = /home/ced/b2ck/trunk/sao-client-actions
 
 # Activate the xml-rpc protocol
 #xmlrpc = *:8069
